--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bottus",
+  "name": "Xzalioos",
   "version": "1.2.8",
   "description": "A whatsapp User bot",
   "main": "./whatsAsena/bot.js",
